fixed z-index on hero

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -557,7 +557,7 @@ button:focus {
   position: fixed;
   top: 0;
   overflow: hidden;
-  z-index: 9;
+  z-index: 999;
   display: grid;
   grid-template-rows: 16;
   grid-template-rows: repeat(16, 1fr);
